WIP
-----------------------------
* Suspension position Widget
  - Add "show_third_spring_position_mark" option, which shows front and rear third spring position mark relative to each suspension position.

* Track map Widget
  - Add "display_orientation" option (requested by user "peterkasbergen" and "lucamilan87"), which sets track map display orientation in degrees.
    For example, a "270" value will rotate map by "270" degrees clockwise. Default value is "0", which always displays track map "north up" in game's coordinate system.
  - Improved "display_detail_level" calculation to work with smaller maps.

* Misc
  - Fixed an issue that would add time increment on pitout prediction (Track map Widget) while outside pit lane.

2.28.1 (2025-05-08)
-----------------------------
* Gear Widget
  - Add "show_rpm_reading" option (requested by users "ebeninca" and "EmperorOfFinland"), which shows RPM charge reading on RPM bar. This option is disabled by default.
  - Add "show_battery_reading" option, which shows battery charge reading (percentage) on battery bar. This option is disabled by default.
  - Add "decimal_places, font_size, font_weight, font_color, offset_x, text_alignment" options for customizing RPM and battery charge readings.

* Track map Widget
  - Add "show_pitout_prediction_while_requested_pitstop" option (requested by user "geims12"), which shows pit out on-track position indication while player has requested pitstop and not in pit lane. This option is enabled by default.

* Misc
  - Fixed an issue that would prevent Track Info Editor from opening while "API state override" is activated.

2.28.0 (2025-05-05)
-----------------------------
* Major change
  - New "Pit stop estimate Widget" and pit stop timing calculation for accurately estimating pit stop duration, designed specifically for "LMU".
  - New "Track Info" preset and "Track Info Editor" for customizing track info, which is currently used for various pit stop related calculation.
