@@ -2043,6 +2043,31 @@ WIDGET_DEFAULT = {
         "column_index_tyre": 4,
         "column_index_wear": 5,
     },
+    "suspension_force": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 391,
+        "position_y": 713,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "bar_padding_horizontal": 0.4,
+        "bar_padding_vertical": 0.3,
+        "bar_width": 50,
+        "bar_gap": 2,
+        "font_color": "#AAAAAA",
+        "highlight_color": "#CC00CC",
+        "bkg_color": "#222222",
+        "show_force_ratio": True,
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "susp force",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
+    },
     "suspension_position": {
         "enable": True,
         "update_interval": 20,
